--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pstar (1.1-alpha4) UNRELEASED; urgency=low
+
+  * Changed package name
+
+ -- Atle Solbakken <atle@goliathdns.no>  Mon, 02 Dec 2013 00:01:32 +0100
+
 p-star (1.1-alpha3) unstable; urgency=low
 
   * Fix for nesting function calls
